--- a/src/app/shared/components/content/content.component.html
+++ b/src/app/shared/components/content/content.component.html
@@ -36,3 +36,17 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<div class="container text-center">
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      <h1 class="fw-light mt-4 text-black">Pizza</h1>
+      <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
+        illum doloremque quo nostrum magnam quas excepturi hic non!</p>
+        <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
+          illum doloremque quo nostrum magnam quas excepturi hic non!</p>
+    </div>
+  </div>
+</div>
