--- a/src/app/shared/components/sobrenos/sobrenos.component.html
+++ b/src/app/shared/components/sobrenos/sobrenos.component.html
@@ -2,7 +2,7 @@
   <div class="container text-center">
     <div class="row justify-content-center">
       <div class="col-md-7">
-        <h1 class="fw-light mt-4 text-black">Lorem ipsum Flexbox</h1>
+        <h1 class="fw-light mt-4 text-black">Sobre-Nós</h1>
         <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
           illum doloremque quo nostrum magnam quas excepturi hic non!</p>
@@ -10,3 +10,34 @@
     </div>
   </div>
 </div>
+
+<form>
+  <div class="container">
+    <div class="col text-center">
+      <button type="button" class="btn btn-outline-success mt-3 mb-3" (click)="open(mymodalcontato)">Contate-nos</button>
+    </div>
+  </div>
+</form>
+
+<ng-template #mymodalcontato let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Contato</h4>
+    <button type="button" class="btn btn-outline-dark" (click)="modal.dismiss('Cross click')">
+      <i class="fa-solid fa-close"></i>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="form-group">
+      <label class="col-form-label mt-2" for="inputDefault">Nome</label>
+      <input type="text" class="form-control" placeholder="Nome para contato" id="inputDefault">
+      <label class="col-form-label mt-2" for="inputDefault">Telefone</label>
+      <input type="text" class="form-control" placeholder="Telefone para contato" id="inputDefault">
+      <label for="exampleTextarea" class="form-label mt-4">Sugestão/Reclamação</label>
+      <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Enviar</button>
+  </div>
+</ng-template>
+
