Adicionado itens cardapio

--- a/src/app/shared/components/cardapio/cardapio.component.html
+++ b/src/app/shared/components/cardapio/cardapio.component.html
@@ -1,57 +1,95 @@
-<div class="container">
-  <div class="card-group">
-    <div class="card">
-      <img src="../../../../assets/cardapio/img1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 1"</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Preço: 45$</small></p>
+<div class="container mx-auto mt-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img4.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza de Bacon</h5>
+          <p class="card-text">É especialmente preparada com bacon inglês de primeira qualidade.</p>
+          <p>Preço $80</p>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="../../../../assets/cardapio/img2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 2"</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Preço 50$</small></p>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img1.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza de Calabresa</h5>
+          <p class="card-text">É especialmente preparada com recheio generoso de linguiça calabresa de primeira qualidade, queijo muçarela e orégano.</p>
+          <p>Preço $60</p>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="../../../../assets/cardapio/img1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 3"</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Preço 40$</small></p>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img5.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza 4 Queijos</h5>
+          <p class="card-text">A clássica pizza "quatro queijos" é feita com muçarela, provolone, parmesão e gorgonzola.</p>
+          <p>Preço $65</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="card-group">
-    <div class="card">
-      <img src="../../../../assets/cardapio/img2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 4"</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Preço 60$</small></p>
+
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img6.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza Napolitana</h5>
+          <p class="card-text">É prato especial da casa. queijo, tomate e alguns temperos especiais.</p>
+          <p>Preço $70</p>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="../../../../assets/cardapio/img1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 5"</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Preço 55$</small></p>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img7.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza Portuguesa</h5>
+          <p class="card-text">Combinação de ingredientes como ervilha, azeitona, molho de tomate, cebola, ovos, queijo, linguiça calabresa e orégano.</p>
+          <p>Preço $75</p>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="../../../../assets/cardapio/img2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pizza "Sabor 6"</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Preço 50$</small></p>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img8.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza Margherita</h5>
+          <p class="card-text">Mussarela, manjericão e tomate em uma massa macia por dentro e crocante por fora.</p>
+          <p>Preço $60</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img9.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza Americana</h5>
+          <p class="card-text">É especialmente preparada com calabresa e queijo de primeira qualidade.</p>
+          <p>Preço $60</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img10.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza de pepperoni</h5>
+          <p class="card-text">Seu maior diferencial é a borda, que é grande e trançada, borda recheada.</p>
+          <p>Preço $70</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../../assets/cardapio/img4.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <div class="card-body">
+          <h5 class="card-title">Pizza de Bacon</h5>
+          <p class="card-text">É especialmente preparada com bacon inglês de primeira qualidade.</p>
+          <p>Preço $60</p>
+        </div>
       </div>
     </div>
   </div>
@@ -60,7 +98,7 @@
 <form>
   <div class="container">
     <div class="col text-center">
-      <button type="button" class="btn btn-outline-success mt-3 mb-3" (click)="open(mymodalcardapio)">Realizar Pedido</button>
+      <button type="button" class="btn btn-outline-dark mt-3 mb-3"><a href="https://api.whatsapp.com/send?phone=5516991458499&text=Ol%C3%A1%20gostaria%20de%20fazer%20meu%20pedido">Realizar Pedido</a></button>
     </div>
   </div>
 </form>
@@ -88,5 +126,3 @@
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Enviar</button>
   </div>
 </ng-template>
-
-
