--- a/src/app/shared/components/content/content.component.html
+++ b/src/app/shared/components/content/content.component.html
@@ -1,29 +1,18 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../../assets/img1.jpg" class="d-block w-100" alt="...">
+      <img src="../../../../assets/img7.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../../assets/img4.jpg" class="d-block w-100" alt="...">
+      <img src="../../../../assets/img6.jpg" class="d-md-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/img5.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
   </div>
@@ -37,16 +26,44 @@
   </button>
 </div>
 
+<section class="light">
+	<div class="container py-2">
+		<div class="h1 text-center text-dark" id="pageHeaderTitle">Pizzas Especiais</div>
+
+		<article class="postcard light red">
+			<a class="postcard__img_link" href="#">
+				<img class="postcard__img" src="../../../../assets/cardapio/img1.jpg" alt="Image Title" />
+			</a>
+			<div class="postcard__text t-dark">
+				<h1 class="postcard__title red"><a href="#">Pizza Calabresa</a></h1>
+				<div class="postcard__bar"></div>
+				<div class="postcard__preview-txt">É especialmente preparada com recheio generoso de linguiça calabresa de primeira qualidade, queijo muçarela e orégano. A linguiça calabresa agrega um sabor único e levemente picante à pizza.</div>
+				<ul class="postcard__tagbox">
+					<li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
+				</ul>
+			</div>
+		</article>
+		<article class="postcard light yellow">
+			<a class="postcard__img_link" href="#">
+				<img class="postcard__img" src="../../../../assets/cardapio/img4.jpg" alt="Image Title" />
+			</a>
+			<div class="postcard__text t-dark">
+				<h1 class="postcard__title yellow"><a href="#">Pizza Bacon</a></h1>
+				<div class="postcard__bar"></div>
+				<div class="postcard__preview-txt">É especialmente preparada com bacon inglês de primeira qualidade, queijo muçarela e orégano.</div>
+				<ul class="postcard__tagbox">
+					<li class="tag__item"><i class="fas fa-clock mr-2"></i>50 mins.</li>
+				</ul>
+			</div>
+		</article>
+	</div>
+</section>
+
 <div class="container text-center">
   <div class="row justify-content-center">
     <div class="col-md-7">
-      <h1 class="fw-light mt-4 text-black">Pizza</h1>
-      <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
-        illum doloremque quo nostrum magnam quas excepturi hic non!</p>
-        <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
-          illum doloremque quo nostrum magnam quas excepturi hic non!</p>
+      <p class="lead text-black-50">Agradecemos muito a sua escolha em ser nosso cliente
+       e esperamos que este seja o começo de uma parceria duradoura</p>
     </div>
   </div>
 </div>
