--- a/src/app/shared/components/cardapio/cardapio.component.html
+++ b/src/app/shared/components/cardapio/cardapio.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="../../../../assets/cardapio/img4.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;">
+        <img src="../../../../assets/cardapio/img4.jpg" class="card-img-top" alt="..." style="max-height: 190.36px;" >
         <div class="card-body">
-          <h5 class="card-title">Pizza de Bacon</h5>
+          <h5 class="card-title">Pizza Bacon</h5>
           <p class="card-text">É especialmente preparada com bacon inglês de primeira qualidade.</p>
           <p>Preço $80</p>
         </div>
