--- a/src/app/shared/components/sobrenos/sobrenos.component.html
+++ b/src/app/shared/components/sobrenos/sobrenos.component.html
@@ -3,9 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-md-7">
         <h1 class="fw-light mt-4 text-black">Sobre-Nós</h1>
-        <p class="lead text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Animi, repellendus debitis iure quaerat culpa voluptates omnis laboriosam. Quaerat veritatis similique at,
-          illum doloremque quo nostrum magnam quas excepturi hic non!</p>
+        <p class="lead text-black-50">A pizza é um dos alimentos mais consumidos do mundo, e como consequência, a nossa pizzaria é um dos estabelecimentos mais populares e desejados pelos consumidores!</p>
       </div>
     </div>
   </div>
